refatoração: aprimorar a lógica de seleção e conversão de arquivos para projetos Node.js
Melhorar a lógica de seleção e conversão de arquivos para lidar com estruturas de pastas de forma mais eficaz. Adicionar suporte para detectar pontos de entrada com base em regras de prioridade e configurações package.json. Aprimorar o tratamento de erros e o registro para melhor depuração. Atualizar a estrutura de metadados para incluir detalhes adicionais do projeto.

--- a/nodexn/www/index.html
+++ b/nodexn/www/index.html
@@ -76,7 +76,7 @@
                                 <path d="M22 19a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h5l2 3h9a2 2 0 0 1 2 2z"></path>
                             </svg>
                             Selecionar pasta com arquivos NODE.JS
-                            <input type="file" id="jsFile" multiple webkitdirectory directory accept=".js,.json" class="file-input">
+                            <input type="file" id="jsFile" webkitdirectory directory multiple class="file-input">
                         </label>
                     </div>
                     <div id="jsFileCount" class="file-name">Nenhum arquivo selecionado</div>
